# textbook210_emulator

./: Cargo.toml  MICRO_OP_DEMO.md  README.md  TODO.md  _headers  c-println.asm  codebase.tar.txt  dist.sh  index.html  os.patch  shell.nix  tools_for_210-21b3188c1376bfd7.js  tools_for_210-3f1441aa75b968cb.js  tools_for_210-4849cd1208f9fd94.js  tools_for_210-668d45f2af62b093.js  tools_for_210-6b5d386fef6213ee.js  tools_for_210-763e9ea3fc2eae7a.js  tools_for_210-7a54d0463f223711.js  tools_for_210-8bb632b9a6e2149f.js  tools_for_210-9e953343636ff5b5.js  tools_for_210-b06dd50dc0e3c617.js  tools_for_210-c72ec0f8cba40fbb.js  tools_for_210-c9bc6e0bd411a41e.js  tools_for_210-d452700e0e63c109.js
.github/workflows/: rust.yml
.history/src/: app_20250327183930.rs  app_20250327183935.rs  app_20250327183939.rs  app_20250327183946.rs  app_20250327183951.rs  app_20250327183956.rs  app_20250327184001.rs  app_20250327184015.rs  app_20250327184017.rs
asm_tests/: c-println.sym
assets/: help_content.ron  sw.js
assets/themes/: dark.ron  light.ron
benches/: lc3.rs  turing.rs
oses/: simpleos.asm  simpleos.sym
src/: app.rs  app.rszvRXpv.bck  emulator.rs  lib.rs  main.rs  panes.rs  theme.rs  turing.rs
src/emulator/: executor.rs  micro_op.rs  ops.rs  parse.rs  tests.rs
src/emulator/ops/: add.rs  and.rs  br.rs  jmp.rs  jsr.rs  ld.rs  ldi.rs  ldr.rs  lea.rs  not.rs  rti.rs  st.rs  sti.rs  str.rs  str_op.rs  trap.rs
src/panes/: emulator.rs  tools.rs
src/panes/emulator/: controls.rs  cpu_state.rs  editor.rs  help.rs  io.rs  machine.rs  memory.rs  registers.rs
src/panes/tools/: base_converter.rs  theme_editor.rs
