[package]
name = "tools_for_210"
version = "0.1.0"
authors = ["Jack Crump-Leys <jackcrumpleys@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { git = "https://github.com/emilk/egui", rev = "81b7e7f05a6b03fa2cd5bdc6d4ce5f598e16c628", features = [
    "serde",
] }
egui_extras = { git = "https://github.com/emilk/egui", rev = "81b7e7f05a6b03fa2cd5bdc6d4ce5f598e16c628", features = [
    "serde",
] }
egui_code_editor = { git = "https://github.com/JackCrumpLeys/egui_code_editor" }
eframe = { default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",
], git = "https://github.com/emilk/egui", rev = "81b7e7f05a6b03fa2cd5bdc6d4ce5f598e16c628" }
log = "0.4"
egui_dock = { git = "https://github.com/JackCrumpLeys/egui_dock" }
rustc-hash = "*"
indexmap = "2.7"
tracing = {version = "0.1", features=["release_max_level_off"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
tracing-web = "0.1"
wasm-bindgen = "0.2"
lazy_static = "1"
winit = "0.30"
web-time = "1"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.70", features = ["Window"] }
ron = "0.10.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 3
lto = "fat"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "turing"
harness = false

[[bench]]
name = "lc3"
harness = false

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
